--- a/style.css
+++ b/style.css
@@ -146,3 +146,75 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+  }
+  header .logo {
+    font-size: 42px;
+  }
+
+  #stay form {
+    display:flex;
+    flex-direction: row;
+  }
+  #stay form .form{
+    flex-direction: column;
+    padding-right: 30px;
+  }
+
+  #about .group{
+    display: flex;
+    flex-direction: row;
+  }
+  .item1-1{
+    display: flex;
+    flex-direction: row;
+    flex:1;
+  }
+  #about img{
+    width: 300px;
+    padding-right: 20px;
+  }
+  .item1-2{
+    display: flex;
+    flex:1;
+    align-items: center;
+  }
+
+
+
+
+  #ideas .group2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  #ideas .item2 {
+    display: flex;
+    flex-direction: column;
+  }
+  #ideas img {
+    width: 400px;
+    padding-bottom: 40px;
+  }
+
+
+  #host{
+    display: flex;
+
+  }
+  .item3-1{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 10px;
+  }
+  .item3-2{
+    flex:1;
+  }
+}
